--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,23 +6,9 @@
     "configurations": [
         {
             "type": "java",
-            "name": "Launch testtemplate",
+            "name": "Launch ccc05s1",
             "request": "launch",
-            "mainClass": "testtemplate",
-            "projectName": "DMOJSOLUTIONS_73a859ae"
-        },
-        {
-            "type": "java",
-            "name": "Launch orzbruce5",
-            "request": "launch",
-            "mainClass": "orzbruce5",
-            "projectName": "DMOJSOLUTIONS_73a859ae"
-        },
-        {
-            "type": "java",
-            "name": "Launch ccc02j2",
-            "request": "launch",
-            "mainClass": "ccc02j2",
+            "mainClass": "ccc05s1",
             "projectName": "DMOJSOLUTIONS_73a859ae"
         },
         {
@@ -30,13 +16,6 @@
             "name": "Launch Main",
             "request": "launch",
             "mainClass": "Main",
-            "projectName": "DMOJSOLUTIONS_73a859ae"
-        },
-        {
-            "type": "java",
-            "name": "Launch oly21practice28",
-            "request": "launch",
-            "mainClass": "oly21practice28",
             "projectName": "DMOJSOLUTIONS_73a859ae"
         },
         {
